--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://www.ppksln.xyz/?get=jun11">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="3;url=https://www.example.com">
+    <title>Redirecting...</title>
 </head>
-<body></body>
+<body>
+    <p>If you are not redirected, <a href="https://www.jikssx.com/?get=SONG11">
+</body>
 </html>
