--- a/index.html
+++ b/index.html
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3;url=https://www.example.com">
-    <title>Redirecting...</title>
+    <title>SFA Earnings</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
+            background: url('https://freeimage.host/i/2SxgQmG') no-repeat center center/cover;
+            transform: scale(1.05); /* Zooming the whole page slightly */
+        }
+        .container {
+            text-align: center;
+            z-index: 1; /* Ensures the buttons appear above the background */
+            transform: scale(1.1); /* Zoom effect for buttons */
+        }
+        .button {
+            display: inline-block;
+            margin: 10px;
+            padding: 20px 40px;
+            font-size: 18px;
+            color: white;
+            background-color: #007bff;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+        .button:hover {
+            transform: scale(1.1);
+        }
+        .button.whatsapp {
+            background-color: #800000; /* Wine color */
+        }
+        .button.telegram {
+            background-color: #0088cc;
+        }
+    </style>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://www.jikssx.com/?get=SONG11">
+    <div class="container">
+        <a href="https://wa.me/your_whatsapp_number" class="button whatsapp">WhatsApp</a>
+        <a href="https://test.lqladepageback.xyz/IN/15/" class="button whatsapp">WhatsApp</a>
+        <a href="https://t.me/SFAEarnings" class="button telegram">Telegram</a>
+    </div>
 </body>
 </html>
